# MeepMeep

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  pytest.ini  setup.py
doc/source/: conf.py  derivatives.rst  index.rst  naming_conventions.rst  orbit_overview.rst  taylor_overview.rst
doc/source/api/: high_level.rst  low_level.rst
docs/: llms.md
docs/source/: citing.rst  conf.py  derivatives.rst  expansion2d_overview.rst  expansion3d_overview.rst  index.rst  naming_conventions.rst  orbit_overview.rst  taylor_overview.rst
docs/source/api/: high_level_expansion2d.rst  high_level_expansion3d.rst  low_level.rst
exorbit/: newton.py  orbit.py  tsorbit.py  xy5.py  xyz5.py
meepmeep/: __init__.py  expansion2d.py  expansion3d.py  knot2d.py  numba2d.py  numba3d.py  orbit.py  tsorbit.py  utils.py  version.py  xy5.py  xy5d.py
meepmeep/backends/: __init__.py
meepmeep/backends/jax/: README.md  __init__.py  ea.py
meepmeep/backends/jax/ts2d/: __init__.py  positiond.py
meepmeep/backends/numba/: __init__.py  expansion_points.py  knots.py  tsorbit.py  utils.py
meepmeep/backends/numba/newton/: __init__.py  newton.py
meepmeep/backends/numba/orbit3d/: __init__.py  _common.py  _parallel.py  cos_phase_angle.py  emission.py  ev_signal.py  lambert.py  light_travel_time.py  phase_angle.py  position.py  projected_angle.py  radial_velocity.py  separation.py  star_planet_distance.py  true_anomaly.py  velocity.py  zposition.py  zvelocity.py
meepmeep/backends/numba/orbit3dd/: __init__.py  _common.py  _parallel.py  cos_phase_angle.py  emission.py  ev_signal.py  lambert.py  light_travel_time.py  phase_angle.py  position.py  projected_angle.py  radial_velocity.py  separation.py  star_planet_distance.py  true_anomaly.py  velocity.py  zposition.py  zvelocity.py
meepmeep/backends/numba/point2d/: __init__.py  _common.py  position.py  separation.py  solve.py  util.py
meepmeep/backends/numba/point2dd/: __init__.py  _common.py  position.py  (+2 more)
meepmeep/tests/: __init__.py  conftest.py  test_contact_points.py  test_direct_evaluator_tc_anchoring.py  test_expansion2d.py  test_expansion_points.py  test_knot2d.py  test_knots.py  test_numba_aggregators.py  test_numba_newton.py  test_numba_orbit3d.py  test_numba_point3dd_array.py  test_numba_position2d.py  test_numba_position2dd.py  test_numba_solve2d.py  test_numba_solve3d.py  test_numba_utils.py  test_orbit3d_evaluators.py  test_orbit3dd_evaluators.py  test_orbit_derivatives.py  test_orbit_dispatchers.py  test_orbit_ep_adaptation.py  test_orbit_knot_adaptation.py  test_orbit_scalar_vector_parity.py  test_parallel_kernels.py  test_point3d_velocity_direct.py  test_point_parallel_kernels.py  test_point_scalar_vector_parity.py  test_tp_gradients.py  test_ts2d_position.py
meepmeep/xy/: __init__.py  derivatives.py  par_direct.py  par_fitting.py  position.py
notebooks/: orbit.ipynb  single_point_2d.ipynb
snappyko/: orbit.py  xy5d.py  xyz5.py
(+92 files in other folders)
