[project]
name = "MeepMeep"
dynamic = ["version"]
description = 'Fast Keplerian orbit computation using Taylor series expansions.'
authors=[{name='Hannu Parviainen', email='hpparvi@gmail.com'}]
classifiers=[
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
keywords = ['astronomy',  'astrophysics',  'exoplanets']
dependencies = ["numpy", "numba", "scipy", "matplotlib"]

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "sphinx-book-theme>=1.1",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "nbsphinx>=0.9",
    "numpydoc>=1.6",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
homepage = 'https://github.com/hpparvi/meepmeep'

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['meepmeep', 'meepmeep.*']
exclude = ['meepmeep.tests', 'meepmeep.tests.*']