[project]
name = "MeepMeep"
dynamic = ["version"]
description = 'Fast Keplerian orbit computation using Taylor series expansions.'
readme = "README.md"
requires-python = ">=3.10"
authors=[{name='Hannu Parviainen', email='hpparvi@gmail.com'}]
classifiers=[
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
keywords = ['astronomy',  'astrophysics',  'exoplanets']
dependencies = [
    "numpy>=1.24",
    "numba>=0.59,<0.64",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "sphinx-book-theme>=1.1",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "nbsphinx>=0.9",
    "numpydoc>=1.6",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
homepage = 'https://github.com/hpparvi/meepmeep'
repository = 'https://github.com/hpparvi/meepmeep'
documentation = 'https://meepmeep.readthedocs.io'

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
# setuptools_scm's VCS file-finder would otherwise sweep git-tracked test
# files in as package data (include-package-data defaults to True for
# pyproject builds), defeating the packages.find exclude below.
include-package-data = false

[tool.setuptools.packages.find]
include = ['meepmeep', 'meepmeep.*']
exclude = ['meepmeep.tests', 'meepmeep.tests.*']